[fix] Raise header component along z to counter overlapping issues

--- a/src/main/javascript/app/layout/components/header/header.component.scss
+++ b/src/main/javascript/app/layout/components/header/header.component.scss
@@ -21,7 +21,7 @@ layout-header {
 
 .root-container > layout-header {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   width: 100%;
   max-width: 1600px;
 
